--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -25,20 +25,15 @@
 		import { OrbitControls } from './jsm/controls/OrbitControls.js'
 
 		import { GUI } from './jsm/libs/dat.gui.module.js';
-		import { EffectComposer } from './jsm/postprocessing/EffectComposer.js';
-		import { SSRPass } from './jsm/postprocessing/SSRPass.js';
-		import { Reflector } from './jsm/objects/ReflectorForSSRPass.js';
+		import { Reflector } from './jsm/objects/Reflector.js';
 
 		import { DRACOLoader } from './jsm/loaders/DRACOLoader.js';
 
 		let params = {
-			enableSSR: true,
-			autoRotate: true,
+			autoRotate: false,
 			isOtherMeshes: true,
 			isReflector: false,
 		}
-		let composer
-		let ssrPass
 		let gui
 		let isPerspectiveCamera = true
 		let stats;
@@ -48,7 +43,6 @@
 		let otherMeshes = []
 		let reflector
 		let reflectorRenderTarget
-		let selects=[]
 
 		const container = document.querySelector('#container');
 
@@ -98,11 +92,24 @@
 				const mesh = new THREE.Mesh(geometry, material);
 				// mesh.castShadow = true;
 				// mesh.receiveShadow = true;
-				scene.add(mesh);
-				selects.push(mesh)
+				// scene.add(mesh);
 
 				// Release decoder resources.
 				dracoLoader.dispose();
+
+				
+				{
+					reflector = new Reflector(geometry, {
+						clipBias: 0.003,
+						textureWidth: window.innerWidth,
+						textureHeight: window.innerHeight,
+						color: 0x888888,
+					});
+					window.reflector=reflector
+					reflectorRenderTarget = reflector.getRenderTarget()
+					reflector.position.copy(mesh.position)
+					scene.add(reflector);
+				}
 
 			});
 
@@ -113,7 +120,6 @@
 				mesh.position.set(-.12, plane.position.y + .025, .015)
 				scene.add(mesh)
 				otherMeshes.push(mesh)
-				selects.push(mesh)
 			}
 			{
 				const geometry = new THREE.IcosahedronBufferGeometry(.025, 4);
@@ -122,7 +128,6 @@
 				mesh.position.set(-.05, plane.position.y + .025, .08)
 				scene.add(mesh)
 				otherMeshes.push(mesh)
-				selects.push(mesh)
 			}
 			{
 				const geometry = new THREE.ConeBufferGeometry(.025, .05, 64);
@@ -131,22 +136,6 @@
 				mesh.position.set(-.05, plane.position.y + .025, -.055)
 				scene.add(mesh)
 				otherMeshes.push(mesh)
-				selects.push(mesh)
-			}
-			{
-				const geometry = new THREE.PlaneBufferGeometry(8, 8);
-				reflector = new Reflector(geometry, {
-					clipBias: 0.003,
-					textureWidth: window.innerWidth,
-					textureHeight: window.innerHeight,
-					color: 0x888888,
-					useDepthTexture: true,
-				});
-				reflectorRenderTarget = reflector.getRenderTarget()
-				reflector.position.y = plane.position.y + .0001;
-				reflector.rotation.x = -Math.PI / 2
-				reflector.visible = params.isReflector
-				scene.add(reflector);
 			}
 
 			// renderer
@@ -172,75 +161,6 @@
 
 			window.addEventListener('resize', onWindowResize, false);
 
-			// composer
-
-			composer = new EffectComposer(renderer);
-			ssrPass = new SSRPass({
-				scene,
-				camera,
-				width: innerWidth,
-				height: innerHeight,
-				encoding: THREE.sRGBEncoding,
-				isPerspectiveCamera: isPerspectiveCamera,
-				selects: params.isReflector ? selects : null,
-				// morphTargets: true,
-			});
-			// window.ssrPass = ssrPass
-			composer.addPass(ssrPass);
-
-			// GUI
-
-			gui = new GUI({ width: 400 });
-			gui.add(params, 'enableSSR').name('Enable SSR');
-			gui.add(params, 'autoRotate').onChange(() => {
-				controls.enabled = !params.autoRotate
-			})
-			gui.add(ssrPass, 'isDistanceAttenuation');
-			ssrPass.maxDistance = .1
-			gui.add(ssrPass, 'maxDistance').min(0).max(1).step(.01);
-			gui.add(params, 'isReflector').onChange(() => {
-				if (params.isReflector) {
-					reflector.visible = true
-					ssrPass.selects = selects
-				} else {
-					reflector.visible = false
-					ssrPass.selects = null
-				}
-			})
-			gui.add(params, 'isOtherMeshes').onChange(() => {
-				if (params.isOtherMeshes) {
-					otherMeshes.forEach(mesh => mesh.visible = true)
-				} else {
-					otherMeshes.forEach(mesh => mesh.visible = false)
-				}
-			})
-			gui.add(ssrPass, 'isFresnel');
-			gui.add(ssrPass, 'isBouncing')
-			gui.add(ssrPass, 'output', {
-				'Default': SSRPass.OUTPUT.Default,
-				'SSR Only': SSRPass.OUTPUT.SSR,
-				'Beauty': SSRPass.OUTPUT.Beauty,
-				'Depth': SSRPass.OUTPUT.Depth,
-				'Normal': SSRPass.OUTPUT.Normal,
-				'Metalness': SSRPass.OUTPUT.Metalness,
-			}).onChange(function (value) {
-
-				ssrPass.output = parseInt(value);
-
-			});
-			ssrPass.opacity = .8
-			gui.add(ssrPass, 'opacity').min(0).max(1);
-			if (isPerspectiveCamera) {
-				ssrPass.surfDist = 0.0015
-				gui.add(ssrPass, 'surfDist').min(0).max(.005).step(.0001);
-			} else {
-				ssrPass.surfDist = 2
-				gui.add(ssrPass, 'surfDist').min(0).max(7).step(.01);
-			}
-			gui.add(ssrPass, 'isInfiniteThick');
-			gui.add(ssrPass, 'thickTolerance').min(0).max(.05).step(.0001);
-			gui.add(ssrPass, 'isBlur');
-
 		}
 
 
@@ -250,8 +170,6 @@
 			camera.updateProjectionMatrix();
 
 			renderer.setSize(window.innerWidth, window.innerHeight);
-			composer.setSize(window.innerWidth, window.innerHeight);
-			reflectorRenderTarget.setSize(window.innerWidth, window.innerHeight);
 
 		}
 
@@ -267,22 +185,9 @@
 
 		function render() {
 
-			if(params.autoRotate){
-				const timer = Date.now() * 0.0003;
+			controls.update()
 
-				camera.position.x = Math.sin(timer) * 0.5;
-				camera.position.y = 0.25;
-				camera.position.z = Math.cos(timer) * 0.5;
-				camera.lookAt(0, 0.1, 0);
-			}else {
-				controls.update()
-			}
-
-			if (params.enableSSR) {
-				composer.render();
-			} else {
-				renderer.render(scene, camera)
-			}
+			renderer.render(scene, camera)
 
 		}
 	</script>
