--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -18,6 +18,7 @@
 		<a href="https://github.com/mrdoob/three.js/pull/20156" target="_blank" rel="noopener">SSRPass</a> demo by <a href="https://github.com/gonnavis" target="_blank">Vis</a>.<br />
 	</div> -->
 
+	<script src="/lib/vs_util/vs_util.js"></script>
 	<script type="module">
 		import * as THREE from '../build/three.module.js';
 		window.THREE=THREE
@@ -304,10 +305,11 @@
 
 			if (params.enableSSR) {
 				composer.render();
-				// for(let i=0;i<1000;i++){
-				// 	pixelRenderer.render(scene,pixelCamera)
-				// }
-				ctx2d.drawImage(renderer.domElement,0,0,cvs2d.width/2,cvs2d.height/2)
+				for(let i=0;i<1000;i++){
+					let {x,y}=vs.serial_to_xy(window.innerWidth,i)
+					pixelRenderer.render(scene,pixelCamera)
+					ctx2d.drawImage(renderer.domElement,x,y,1,1)
+				}
 			} else {
 				renderer.render(scene, camera)
 			}
