--- a/examples/webgl_lights_physical_bake.html
+++ b/examples/webgl_lights_physical_bake.html
@@ -17,7 +17,7 @@
 
 		<script type="module">
 
-			import * as THREE from '../build/three.module.js';
+			import * as THREE from '../build/three.module.js';window.THREE=THREE
 
 			import Stats from './jsm/libs/stats.module.js';
 			import { GUI } from './jsm/libs/dat.gui.module.js';
@@ -26,6 +26,7 @@
 
 			let camera, scene, renderer, bulbLight, bulbMat, hemiLight, stats;
 			let ballMat, cubeMat, floorMat;
+			let cubeMat2
 
 			let previousShadowMap = false;
 
@@ -165,6 +166,34 @@
 
 				} );
 
+cubeMat2 = new THREE.MeshStandardMaterial( {
+	roughness: 0.7,
+	color: 0xffffff,
+	bumpScale: 0.002,
+	metalness: 0.2
+} );
+textureLoader.load( "textures/brick_diffuse.jpg", function ( map ) {
+
+	map.wrapS = THREE.RepeatWrapping;
+	map.wrapT = THREE.RepeatWrapping;
+	map.anisotropy = 4;
+	map.repeat.set( 1, 1 );
+	map.encoding = THREE.sRGBEncoding;
+	cubeMat2.map = map;
+	cubeMat2.needsUpdate = true;
+
+} );
+textureLoader.load( "textures/brick_bump.jpg", function ( map ) {
+
+	map.wrapS = THREE.RepeatWrapping;
+	map.wrapT = THREE.RepeatWrapping;
+	map.anisotropy = 4;
+	map.repeat.set( 1, 1 );
+	cubeMat2.bumpMap = map;
+	cubeMat2.needsUpdate = true;
+
+} );
+
 				ballMat = new THREE.MeshStandardMaterial( {
 					color: 0xffffff,
 					roughness: 0.5,
@@ -199,12 +228,75 @@
 				ballMesh.rotation.y = Math.PI;
 				ballMesh.castShadow = true;
 				scene.add( ballMesh );
+				if (1) { //bake
+					ballMesh.material.onBeforeCompile = function(shader) {
+						shader.vertexShader = shader.vertexShader
+							.replace('#include <project_vertex>', `
+
+								vec4 mvPosition = vec4( transformed, 1.0 );
+
+								#ifdef USE_INSTANCING
+
+									mvPosition = instanceMatrix * mvPosition;
+
+								#endif
+
+								mvPosition = modelViewMatrix * mvPosition;
+
+								gl_Position = projectionMatrix * mvPosition;
+
+								//////////////////////////////////////
+
+								// vec2 test=uv-.5;
+								// test*=10.;
+								// gl_Position = projectionMatrix * vec4(test.x,0,test.y,1);
+
+								vec2 test=uv;
+								test-=.99;
+								// test*=2.;
+								// test.x*=-1.;
+								gl_Position = vec4(test,0,1);
+							`)
+					}
+				}
 
 				const boxGeometry = new THREE.BoxGeometry( 0.5, 0.5, 0.5 );
-				const boxMesh = new THREE.Mesh( boxGeometry, cubeMat );
+				// const boxMesh = new THREE.Mesh( new THREE.BoxGeometry(), cubeMat2 );
+				const boxMesh = new THREE.Mesh( new THREE.PlaneGeometry(), cubeMat2 );
 				boxMesh.position.set( - 0.5, 0.25, - 1 );
 				boxMesh.castShadow = true;
 				scene.add( boxMesh );
+				if (0) { //bake
+					boxMesh.material.onBeforeCompile = function(shader) {
+						shader.vertexShader = shader.vertexShader
+							.replace('#include <project_vertex>', `
+
+								vec4 mvPosition = vec4( transformed, 1.0 );
+
+								#ifdef USE_INSTANCING
+
+									mvPosition = instanceMatrix * mvPosition;
+
+								#endif
+
+								mvPosition = modelViewMatrix * mvPosition;
+
+								gl_Position = projectionMatrix * mvPosition;
+
+								//////////////////////////////////////
+
+								// vec2 test=uv-.5;
+								// test*=10.;
+								// gl_Position = projectionMatrix * vec4(test.x,0,test.y,1);
+
+								vec2 test=uv;
+								test-=.99;
+								// test*=2.;
+								// test.x*=-1.;
+								gl_Position = vec4(test,0,1);
+							`)
+					}
+				}
 
 				const boxMesh2 = new THREE.Mesh( boxGeometry, cubeMat );
 				boxMesh2.position.set( 0, 0.25, - 5 );
@@ -218,6 +310,7 @@
 
 
 				renderer = new THREE.WebGLRenderer();
+				renderer.setClearColor('red')
 				renderer.physicallyCorrectLights = true;
 				renderer.outputEncoding = THREE.sRGBEncoding;
 				renderer.shadowMap.enabled = true;
