--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -33,7 +33,7 @@
 
 		let params = {
 			enableSSR: true,
-			autoRotate: true,
+			autoRotate: false,
 			isOtherMeshes: true,
 			isReflector: false,
 		}
@@ -107,10 +107,10 @@
 			});
 
 			{
-				const geometry = new THREE.BoxBufferGeometry(.05, .05, .05);
+				const geometry = new THREE.BoxBufferGeometry(.05, .3, .3);
 				const material = new THREE.MeshStandardMaterial({ color: 'green' })
 				const mesh = new THREE.Mesh(geometry, material)
-				mesh.position.set(-.12, plane.position.y + .025, .015)
+				mesh.position.set(-.13, plane.position.y + .15, .015)
 				scene.add(mesh)
 				otherMeshes.push(mesh)
 				selects.push(mesh)
@@ -196,7 +196,7 @@
 				controls.enabled = !params.autoRotate
 			})
 			gui.add(ssrPass, 'isDistanceAttenuation');
-			ssrPass.maxDistance = .1
+			ssrPass.maxDistance = .3
 			gui.add(ssrPass, 'maxDistance').min(0).max(1).step(.01);
 			gui.add(params, 'isReflector').onChange(() => {
 				if (params.isReflector) {
